fix: wrong option name of night mode

--- a/_includes/extensions/theme-toggle.html
+++ b/_includes/extensions/theme-toggle.html
@@ -94,7 +94,7 @@
       } else {
         handleThemeToggle(themeData.nightShift);
       }
-    } else if (nightModeOption == 'mannual') {
+    } else if (nightModeOption == 'manual') {
       handleThemeToggle(themeData.nightShift);
     } else {
       handleThemeToggle(nightModeOption == 'on');
