fix: wrong default value of night mode

--- a/_includes/extensions/theme-toggle.html
+++ b/_includes/extensions/theme-toggle.html
@@ -81,7 +81,7 @@
       handleThemeToggle(event.target.checked);
     });
 
-    var nightModeOption = '{{ night_mode }}';
+    var nightModeOption = '{{ night_mode }}' || 'auto';
     nightModeOption = nightModeOption.toLowerCase();
 
     if (nightModeOption == 'auto') {
