--- a/_sass/misc/theme-toggle.scss
+++ b/_sass/misc/theme-toggle.scss
@@ -1,6 +1,6 @@
 .theme-toggle {
   position: relative;
-  width: 102px;
+  width: $base-font-size * 7.75;
   margin-top: 10px;
   margin-right: 60px;
   margin-left: auto;
