--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -497,6 +497,7 @@ html {
     @include relative-font-size(1.125);
     line-height: 15px;
     color: #666;
+    max-width: 50%;
   }
 
   .previous:before {
