feat: better default text color in light mode

--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -10,7 +10,7 @@ $base-line-height: 1.6 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #313b3f !default;
+$text-color:       #454545 !default;
 $background-color: #fff !default;
 $brand-color:      #ff5100 !default;
 
