feat: better inline code style

--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -148,10 +148,9 @@ code {
 }
 
 *:not(pre) > code {
-  padding: 1px 5px;
+  padding: 3px 6px;
   border-radius: 3px;
-  color: #fff;
-  background-color: #787878;
+  background-color: #eee;
   margin: 0 5px;
 }
 
