--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -65,5 +65,6 @@ $on-laptop:        800px !default;
   "misc/theme-toggle",
   "misc/article-menu",
   "misc/common-list",
-  "misc/google-translate"
+  "misc/google-translate",
+  "misc/gitment"
 ;
