--- a/_includes/views/pagination.html
+++ b/_includes/views/pagination.html
@@ -16,6 +16,8 @@
       {% assign lang = post.lang %}
       {%- include functions.html func='get_reading_time' -%}
       {% assign reading_time = return %}
+      {%- include functions.html func='get_article_excerpt' -%}
+      {% assign excerpt = return %}
 
       <h2 class="post-title">
         {%- assign post_url = post.url | relative_url -%}
@@ -28,7 +30,7 @@
         <span class="post-reading-time left-vsplit"><i class="fa fa-clock-o"></i> {{ reading_time }}</span>
       </div>
       <p class="post-excerpt">
-        {{ post.content | strip_html | truncatewords: 50 }}
+        {{ excerpt }}
       </p>
       <div class="post-tags">
         {%- for tag in post.tags -%}
