--- a/_includes/functions/get_article_excerpt.html
+++ b/_includes/functions/get_article_excerpt.html
@@ -11,7 +11,9 @@
 {% if include.params.excerpt_size %}
   {% assign excerpt_size = include.params.excerpt_size %}
 {% else %}
-  {% assign excerpt_size = excerpt_size | default: 800 %}
+  {% assign excerpt_size = excerpt_size
+    | default: site.excerpt_size
+    | default: 350 %}
 {% endif %}
 
 {%- include functions.html func='get_article_words' -%}
