chore: better blockquote style for dark mode

--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -20,6 +20,10 @@ html[data-theme="dark"]  {
     background-color: #454545;
   }
 
+  blockquote {
+    border-left: 4px solid #484848;
+  }
+
   table {
     color: #9d9d9d;
 
