--- a/_sass/misc/gitment.scss
+++ b/_sass/misc/gitment.scss
@@ -2,6 +2,10 @@
   color: #787878 !important;
 }
 
+.gitment-editor-header {
+  background-color: #fefefe;
+}
+
 .gitment-comment-main, .gitment-editor-main {
   background-color: #fff;
   border-radius: 3px !important;
