Fix Post Excerpt

--- a/_includes/views/pagination.html
+++ b/_includes/views/pagination.html
@@ -30,7 +30,7 @@
         <span class="post-reading-time left-vsplit"><i class="fa fa-clock-o"></i> {{ reading_time }}</span>
       </div>
       <p class="post-excerpt">
-        {{ excerpt }}
+        {{ post.excerpt }}
       </p>
       <div class="post-tags">
         {%- for tag in post.tags -%}
