--- a/_includes/views/pagination.html
+++ b/_includes/views/pagination.html
@@ -34,7 +34,7 @@
       </p>
       <div class="post-tags">
         {%- for tag in post.tags -%}
-        <a class="post-tag" href="/tags.html#{{tag}}">#{{tag}}</a>
+        <a class="post-tag" href="{{ '/tags.html ' | relative_url }}#{{tag}}">#{{tag}}</a>
         {%- endfor -%}
       </div>
     </li>
