fix: correct the footer background colour
When the body content is less, the footer background colour should be transparent.

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -36,7 +36,8 @@ html {
     }
 
     footer.site-footer {
-      background-color: $theme-color;
+      color: unset;
+      background-color: transparent;
 
       .site-footer-inner {
         border-top: solid 1px #eee;
