fix: footer/menu popup colours (#33)
* Fix footer/menu popup colours

* fix: correct the footer background colour

When the body content is less, the footer background colour should be transparent.

Co-authored-by: JT <jeffreytse.mail@gmail.com>

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -23,7 +23,7 @@ html {
 
         @include media-query($on-laptop) {
           .page-link {
-            color: unset;
+            color: $header-text-color;
           }
 
           .menu-icon {
@@ -36,6 +36,7 @@ html {
     }
 
     footer.site-footer {
+      color: unset;
       background-color: transparent;
 
       .site-footer-inner {
