feat: add img tag of banner for SEO

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -570,6 +570,10 @@ html {
       @include center-image;
       transition: 0.1s all ease-in-out;
     }
+
+    & > img.img-placeholder {
+      display: none;
+    }
   }
 
   .wrapper {
