--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -32,6 +32,7 @@
   <section class="page-banner">
     <div class="page-banner-img">
       <div style="background-image: url({{ banner_image }})"></div>
+      <img class="img-placeholder" src="{{ banner_image }}"></div>
     </div>
     <div class="wrapper">
       <div class="page-banner-inner">
