--- a/_includes/functions/get_banner.html
+++ b/_includes/functions/get_banner.html
@@ -26,3 +26,8 @@
 {% assign name = 'banner.height' %}
 {%- include functions.html func='get_value' -%}
 {% assign banner_height = return %}
+
+{%- include functions.html func='log' level='debug' msg='Get banner_min_height value' -%}
+{% assign name = 'banner.min_height' %}
+{%- include functions.html func='get_value' -%}
+{% assign banner_min_height = return %}
