feat: re-format copyright message and auto increase current year

--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -3,7 +3,10 @@
 
   <div class="wrapper">
     <div class="site-footer-inner">
-      <div>{{ site.copyright }} {% if site.author %}@{{ site.author | escape }}{% endif %}</div>
+      <div>{% assign currYear = 'now' | date: "%Y" %}
+        {% assign currYearVar = '{currentYear}' %}
+        {% assign authorVar = '{author}' %}
+        {{ site.copyright | replace: '(c)', '&copy;' | replace: '(p)', '℗' | replace: '(cleft)', '<span class="copyleft">&copy;</span>' | replace: currYearVar, currYear | replace: authorVar, site.author}}</div>
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
       generator." href="http://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
       another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
