fix: wrong default value of calling functions

--- a/_includes/functions.html
+++ b/_includes/functions.html
@@ -16,6 +16,10 @@
   {%- include {{ include_path }} params=params-%}
 {%- endif -%}
 
+{%- if return == nil -%}
+  {%- assign return = include.default -%}
+{%- endif -%}
+
 {%- if func != 'log' -%}
   {%- assign msg = '[function]['
     | append: {{func}}
