--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -3,10 +3,15 @@
 
   <div class="wrapper">
     <div class="site-footer-inner">
-      <div>{% assign currYear = 'now' | date: "%Y" %}
-        {% assign currYearVar = '{currentYear}' %}
-        {% assign authorVar = '{author}' %}
-        {{ site.copyright | replace: '(c)', '&copy;' | replace: '(p)', '℗' | replace: '(cleft)', '<span class="copyleft">&copy;</span>' | replace: currYearVar, currYear | replace: authorVar, site.author}}</div>
+      <div>
+        {%- assign currYear = 'now' | date: "%Y" -%}
+        {{ site.copyright
+            | replace: '{currentYear}', currYear
+            | replace: '{author}', site.author
+            | replace: '(c)', '&copy;'
+            | replace: '(p)', '℗'
+            | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
+        }}</div>
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
       generator." href="http://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
       another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
