--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -122,7 +122,10 @@
             <h2 class="page-banner-subheading">
             <strong>{{ subheading | default: page.subtitle | escape }}</strong>
                 <a href="https://recruit.danawa.com/" class="main-banner__link" target="_blank">
-                    <strong>[채용공고 지원하기[</strong>
+              <button type="button" class="button--cate">
+               <span class="blind">카테고리</span>
+              </button>
+              <!--    <strong>[채용공고 지원하기]</strong> -->
                 </a>
             </h2>  
           
