--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -123,10 +123,9 @@
             <strong>{{ subheading | default: page.subtitle | escape }}</strong>
                 <a href="https://recruit.danawa.com/" class="main-banner__link" target="_blank">
               <button type="button" class="button--cate">
-               <span class="blind">카테고리</span>
+               <span class="blind"><strong>[채용공고 지원하기]</strong></span>
               </button>
-              <!--    <strong>[채용공고 지원하기]</strong> -->
-                </a>
+               </a>
             </h2>  
           
           </div>
