--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -122,8 +122,8 @@
             <h2 class="page-banner-subheading">
             <strong>{{ subheading | default: page.subtitle | escape }}</strong>
                 <a href="https://recruit.danawa.com/" class="main-banner__link" target="_blank">
-              <button type="button" class="button--cate">
-               <span class="blind"><strong>[채용공고 지원하기]</strong></span>
+              <button type="button" class="btn btn-default btn-lg">
+               <span class="blind"><strong>채용공고 지원하기</strong></span>
               </button>
                </a>
             </h2>  
