--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -122,7 +122,7 @@
             <h2 class="page-banner-subheading">
             <strong>{{ subheading | default: page.subtitle | escape }}</strong>
                 <a href="https://recruit.danawa.com/" class="main-banner__link" target="_blank">
-              <button type="button" class="btn btn-default btn-lg">
+              <button type="button" background-color: #4CAF50;font-size: 16px;class="button button1">
                <span class="blind"><strong>채용공고 지원하기</strong></span>
               </button>
                </a>
