--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -121,7 +121,7 @@
           
             <h2 class="page-banner-subheading">
             <strong>{{ subheading | default: page.subtitle | escape }}</strong>
-                <a href="https://recruit.danawa.com/" class="main-banner__link" target="_blank">
+                <a href="https://www.notion.so/a8ba5d615d5a47289b43a576e3b5bd77?v=b8f00b5e10904cfabf962b93f3965064" class="main-banner__link" target="_blank">
               <button type="button" background-color: #4CAF50;font-size: 16px;class="button button1">
                <span class="blind"><strong>채용공고 지원하기</strong></span>
               </button>
