--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -122,7 +122,7 @@
             <h2 class="page-banner-subheading">
             <strong>{{ subheading | default: page.subtitle | escape }}</strong>
                 <a href="https://www.notion.so/a8ba5d615d5a47289b43a576e3b5bd77?v=b8f00b5e10904cfabf962b93f3965064" class="main-banner__link" target="_blank">
-              <button type="button" class="btn btn-">
+              <button type="button" class="btn btn-apply btn-lg">
                <span class="blind"><strong>채용공고 지원하기</strong></span>
               </button>
                </a>
