--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -30,7 +30,8 @@ $footer-text-color: lighten(invert($theme-color), 25%) !default;
 $footer-background-color: darken($theme-color, 5%) !default;
 
 $banner-height: 500px !default;
-$banner-text-color: lighten($white-color, 0%) !default;
+$banner-text-color: #882250 !default;
+// $banner-text-color: lighten($white-color, 0%) !default;
 $banner-background: rgba(0,0,0,0.8) !default;
 
 // Width of the content area
