--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -22,7 +22,8 @@ $white-color: #fdfdfd !default;
 $table-text-align: left !default;
 
 $header-height: $base-line-height * $base-font-size * 2.85 !default;
-$header-text-color: invert($theme-color) !default;
+$header-text-color: #882250 !default;
+// $header-text-color: invert($theme-color) !default;
 $header-background-color: $theme-color !default;
 
 $footer-height: $header-height * 1.05 !default;
@@ -30,8 +31,7 @@ $footer-text-color: lighten(invert($theme-color), 25%) !default;
 $footer-background-color: darken($theme-color, 5%) !default;
 
 $banner-height: 500px !default;
-$banner-text-color: #882250 !default;
-// $banner-text-color: lighten($white-color, 0%) !default;
+$banner-text-color: lighten($white-color, 0%) !default;
 $banner-background: rgba(0,0,0,0.8) !default;
 
 // Width of the content area
