--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -12,10 +12,15 @@
             | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
         -%}
       <div>{{ copyright }}</div>
+      
+      <div> YouTube <a href=https://www.youtube.com/channel/UCp0eW6Ei9V9APSr5jpTjoig>YouTube</a>
+      
+      <!--기존 작성내용
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
       generator." href="http://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
       another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
-      <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div>
+      <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div> -->
+
     </div>
   </div>
 </footer>
