--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -13,7 +13,7 @@
         -%}
       <div>{{ copyright }}</div>
       
-      <div> YouTube <a href=https://www.youtube.com/channel/UCp0eW6Ei9V9APSr5jpTjoig>YouTube</a>
+      <div><img src="/assets/images/youtube.png"> <a href=https://www.youtube.com/channel/UCp0eW6Ei9V9APSr5jpTjoig>YouTube</a>
       
       <!--기존 작성내용
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
