--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -13,7 +13,7 @@
         -%}
       <div>{{ copyright }}</div>
       
-      <div> SNS 계정 :  <a href=https://www.youtube.com/channel/UCp0eW6Ei9V9APSr5jpTjoig>YouTube</a> |  <a href=https://Linkedin.com/company/coursemos>LinkedIn</a> | <a href=https://www.facebook.com/coursemos.seeds>Facebook</a>
+      <div> SNS Follow :  <a href=https://www.youtube.com/channel/UCp0eW6Ei9V9APSr5jpTjoig>YouTube</a> |  <a href=https://Linkedin.com/company/coursemos>LinkedIn</a> | <a href=https://www.facebook.com/coursemos.seeds>Facebook</a>
       
       <!--기존 작성내용
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
