--- a/_includes/extensions/comments/disqus.html
+++ b/_includes/extensions/comments/disqus.html
@@ -1,15 +1,16 @@
   <div id="disqus_thread"></div>
   <script>
+  /**
     var disqus_config = function () {
       this.page.url = '{{ page.url | absolute_url }}';
       this.page.identifier = '{{ page.url | absolute_url }}';
     };
-
+  */
     (function() {
       var d = document, s = d.createElement('script');
 
-      s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
-
+    <!--  s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js'; -->
+      s.src = 'https://techhrmaker.disqus.com/embed.js';
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
     })();
